# syscalldumper

./: CMakeLists.txt  README.md  SyscallDumper.sln  SyscallDumper.vcxproj  SyscallDumper.vcxproj.filters  program.c  program.cpp
exports/4.0.1381.1/: axp.txt  i386.txt  ppc.txt
x64/Release/: SyscallDumper.exe.recipe  SyscallDumper.iobj  SyscallDumper.ipdb  SyscallDumper.vcxproj.FileListAbsolute.txt
x64/Release/SyscallDumper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SyscallDumper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
